--- a/web/build.gradle
+++ b/web/build.gradle
@@ -23,6 +23,8 @@ repositories {
 }
 
 dependencies {
+    compile project(":entity")
+    
     implementation('org.springframework.boot:spring-boot-starter')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     implementation('org.springframework.boot:spring-boot-starter-controller')
